added docs and changes made